# rs-picoha-io

./: .gitignore  Cargo.toml  Justfile  README.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/board/: Cargo.toml
crates/board/src/: lib.rs
crates/platform/: Cargo.toml  build.rs
crates/platform/src/: main.rs  platform_impl.rs  usb_config.rs
crates/platform_io/: Cargo.toml
crates/platform_io/src/: gpio_ctrl.rs  lib.rs
crates/protocols/src/: gpio.rs  ha.rs
docker/: Dockerfile
firmware/: Cargo.toml  Justfile
firmware/apps/picoha-encoder/: Cargo.toml
firmware/apps/picoha-encoder/src/: main.rs
firmware/apps/picoha-encoder/src/board/: mod.rs
firmware/apps/picoha-encoder/src/platform/: mod.rs
firmware/apps/picoha-encoder/src/platform_io/: mod.rs
firmware/apps/picoha-io/: Cargo.toml  build.rs
firmware/apps/picoha-io/.cargo/: config
firmware/apps/picoha-io/crates/app/: Cargo.toml
firmware/apps/picoha-io/crates/platform/: Cargo.toml
firmware/apps/picoha-io/crates/platform_io/src/: gpio_ctrl.rs
firmware/apps/picoha-io/src/: main.rs
firmware/apps/picoha-io/src/app/: mod.rs
firmware/apps/picoha-io/src/platform/: mod.rs  platform_impl.rs
firmware/apps/picoha-io/src/platform_io/: mod.rs
firmware/common/protocols/src/: lib.rs
firmware/crates/app/: build.rs
firmware/docker/: Dockerfile-openocd  Dockerfile-toolchain
python/ha/device/: __init__.py  gpio.py
python/ha/protocol/: framing.py  gpio.py  parser.py
