[package]
name = "rp-pico-platform"
version = "0.0.1"
edition = "2021"

[dependencies]

# Cortex support
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Rp pico support
rp2040-boot2 = { version = "0.2.0", optional = true }
rp-pico = "0.3.0"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
panic-probe = "0.3.1"
embedded-time = "0.12.1"

platform_io = {path="../platform_io/"}
app         = {path="../app"}

[features]
boot2 = ["rp2040-boot2"]
