[package]
name = "picoha-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cortex-m    = "0.7.7"
cortex-m-rt = "0.7.3"


rp2040-boot2 = {version="0.3.0", optional=true}
rp-hal       = "0.0.2"
rp-pico      = "0.8.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-probe = "0.3.1"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
fugit = "0.3.7"
fixed = "1.24.0"


[features]
boot2 = ["rp2040-boot2"]
